force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/ucinn_ascendv2__Service_Indicator_Value__c.object-meta.xml
<CustomObject>
    <description>List of preferences that a constituent may have, such as Do Not Call, Do Not Solicit, etc.</description>
    <label>Service Indicator Value</label>
    <nameField>
        <label>Service Indicator Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Indicator Values</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>