force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Service Indicator is Active or Inactive.</description>
    <inlineHelpText>Indicates whether the Service Indicator is Active or Inactive.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>