force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/fields/Special_Handling_Alert__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show on alert panel for selected special handling for prospecting.</description>
    <inlineHelpText>Show on alert panel for selected special handling for prospecting. Check to show on panel.</inlineHelpText>
    <label>Special Handling Alert</label>
    <type>Checkbox</type>
</CustomField>