force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/fields/ucinn_ascendv2__Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>