force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/fields/ucinn_ascendv2__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>