force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/fields/ucinn_ascendv2__Is_Always_Show_Service_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Always_Show_Service_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to always display Service Indicator</description>
    <label>Always Show Service Indicator</label>
    <type>Checkbox</type>
</CustomField>