force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/fields/ucinn_ascendv2__Unit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Unit</valueSetName>
    </valueSet>
</CustomField>