force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/fields/ucinn_portal_Is_Always_Display_On_MyInfo__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Is_Always_Display_On_MyInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Always Display On My Info</label>
    <type>Checkbox</type>
</CustomField>