force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/fields/ucinn_portal_Portal_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_portal_Portal_Description__c</fullName>
    <label>Portal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>