force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/listViews/Contact_Preferences.listView-meta.xml
<ListView>
    <fullName>Contact_Preferences</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Service_Indicator_Description__c</columns>
    <columns>ucinn_ascendv2__Is_Always_Show_Service_Indicator__c</columns>
    <columns>ucinn_ascendv2__Code__c</columns>
    <columns>ucinn_ascendv2__Unit__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ISUF_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ISUF_Type__c</field>
        <operation>equals</operation>
        <value>Contact Preferences</value>
    </filters>
    <label>Contact Preferences</label>
</ListView>