force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/listViews/General_Indicators.listView-meta.xml
<ListView>
    <fullName>General_Indicators</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Service_Indicator_Description__c</columns>
    <columns>ucinn_ascendv2__Is_Always_Show_Service_Indicator__c</columns>
    <columns>ucinn_ascendv2__Code__c</columns>
    <columns>ucinn_ascendv2__Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ISUF_Type__c</field>
        <operation>equals</operation>
        <value>General</value>
    </filters>
    <label>General Indicators</label>
</ListView>