force-app/main/default/objects/ucinn_ascendv2__Service_Indicator_Value__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Code__c</columns>
    <columns>ucinn_ascendv2__Service_Indicator_Description__c</columns>
    <columns>ISUF_Type__c</columns>
    <columns>ucinn_ascendv2__Unit__c</columns>
    <columns>ucinn_ascendv2__Is_Always_Show_Service_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>